--- a/demo/animation/index.html
+++ b/demo/animation/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>animation</title>
-	<link rel="stylesheet" href="animation.css">
+	<link rel="stylesheet" href="transform.css">
 </head>
 <body>
 	<div class="md-modal md-effect-1" id="modal-1">
@@ -115,6 +115,25 @@
 			<a href="#" class="md-trigger" data-modal="modal-5">3d sine</a>
 			<a href="#" class="md-trigger" data-modal="modal-6">Make way!</a>
 			<a href="#" class="md-trigger" data-modal="modal-7">Slip from top</a>
+		</div>
+		<div class="bd">
+			<span><a href="javascript:;" class="item i-effect-1">translate3d</a></span>
+			<span><a href="javascript:;" class="item i-effect-2">translateZ</a></span>
+			<span><a href="javascript:;" class="item i-effect-3">scale</a></span>
+			<span><a href="javascript:;" class="item i-effect-4">rotateY</a></span>
+			<span><a href="javascript:;" class="item i-effect-5">translateZ</a></span>
+			<span><a href="javascript:;" class="item i-effect-6">origin</a></span>
+			<span><a href="javascript:;" class="item i-effect-6">origin</a></span>
+		</div>
+		<div class="cube-wrap">
+			<div class="box">
+				<span class="a">1</span>
+				<span class="b">2</span>
+				<span class="c">3</span>
+				<span class="d">4</span>
+				<span class="e">5</span>
+				<span class="f">6</span>
+			</div>
 		</div>
 	</div>
 </body>
