--- a/demo/table自适应布局.html
+++ b/demo/table自适应布局.html
@@ -2,85 +2,85 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!-- <meta name="viewport" content="width=320, user-scalable=no,target-densityDpi=device-dpi"> -->
+	<meta name="viewport" content="width=320, user-scalable=no,target-densityDpi=device-dpi">
 	<title>table</title>
 	<style>
 	body {
-    font-family: arial;
-}
-
-table {
-    border: 1px solid #ccc;
-    width: 100%;
-    margin:0;
-    padding:0;
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-table tr {
-    border: 1px solid #ddd;
-    padding: 5px;
-}
-
-table th, table td {
-    padding: 10px;
-    text-align: center;
-}
-
-table th {
-    text-transform: uppercase;
-    font-size: 14px;
-    letter-spacing: 1px;
-}
-
-@media screen and (max-width: 600px) {
-    table {
-        border: 0;
+        font-family: arial;
     }
 
-    table thead {
-        display: none;
+    table {
+        border: 1px solid #ccc;
+        width: 100%;
+        margin:0;
+        padding:0;
+        border-collapse: collapse;
+        border-spacing: 0;
     }
 
     table tr {
-        margin-bottom: 10px;
-        display: block;
+        border: 1px solid #ddd;
+        padding: 5px;
     }
 
-    table tr:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-  
-    table tr:before {
-        display: block;
-        /*border-bottom: 2px solid #ddd;*/
+    table th, table td {
+        padding: 10px;
+        text-align: center;
     }
 
-    table td {
-        box-sizing: border-box;
-        display: block;
-        float: left;
-        clear: left;
-        width: 100%;
-        text-align: right;
-        font-size: 13px;
-        border-bottom: 1px dotted #ccc;
-    }
-
-    table td:last-child {
-        border-bottom: 0;
-    }
-
-    table td:before {
-        content: attr(data-label);
-        float: left;
+    table th {
         text-transform: uppercase;
-        font-weight: bold;
+        font-size: 14px;
+        letter-spacing: 1px;
     }
-}
+
+    @media screen and (max-width: 600px) {
+        table {
+            border: 0;
+        }
+
+        table thead {
+            display: none;
+        }
+
+        table tr {
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        table tr:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+      
+        table tr:before {
+            display: block;
+            /*border-bottom: 2px solid #ddd;*/
+        }
+
+        table td {
+            box-sizing: border-box;
+            display: block;
+            float: left;
+            clear: left;
+            width: 100%;
+            text-align: right;
+            font-size: 13px;
+            border-bottom: 1px dotted #ccc;
+        }
+
+        table td:last-child {
+            border-bottom: 0;
+        }
+
+        table td:before {
+            content: attr(data-label);
+            float: left;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+    }
 	</style>
 </head>
 <body>
